# pavol-celuch-acme-lotto

./: .babelrc.json  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  package.json  pyproject.toml  webpack.config.js
assets/src/js/: App.js  app.css  index.js
assets/src/js/api/: axios.js
assets/src/js/components/: App.js  ErrorPage.js  Home.js  Layout.js  Login.js  Logout.js  Lottery.js  MyBallots.js  RequiredAuth.js  Signup.js
assets/src/js/components/Ballots/: BallotCard.js  DeleteBallotButton.js  EmptyBallots.js  MyBallots.css  MyBallots.js
assets/src/js/components/Lottery/: ActiveLottery.js  AllLotteries.css  AllLotteries.js  BuyBallotButton.js  EmptyCard.js  Lottery.js  LotteryCard.js  (+2 more)
assets/src/js/context/: AuthProvider.js  CachedAuthProvider.js
assets/src/js/hooks/: useAxiosPrivate.js  useCachedAuth.js
assets/src/js/utils/: utils.js
backend/access/: forms.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/ballot/: admin.py  models.py  permissions.py  serializers.py  views.py
backend/ballot/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ballot_lottery.py  0004_ballot_created.py  0005_alter_ballot_lottery_alter_ballot_user.py
backend/lottery/: admin.py  models.py  serializers.py  views.py
backend/lottery/cron/: tasks.py
backend/lottery/migrations/: 0001_initial.py  0002_alter_lottery_ballot.py  0003_rename_ballot_lottery_ballots.py  0004_alter_lotterywinner_unique_together.py
backend/templates/frontend/: index.html
core/project/: settings.py  urls.py
templates/frontend/: index.html
(+2 files in other folders)
